adds -fexceptions compiler option
project.conf contains this line:
common_flags: "-O2 -g -pipe -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -fexceptions -fstack-protector-strong -grecord-gcc-switches"
which causes all C++ code to be built with -fexceptions, overriding any project-defined -fno-exceptions flag since these options are added by meson after the project-defined options (since they come in via CXXFLAGS env var).
This causes vte to be built with -fexceptions, contrary to its own build system forcing -fno-exceptions.
I think it is never correct to override an -fno-exceptions, so -fexceptions should be dropped here.