build: Add no-exceptions sanity check

Some distributions pass -fexceptions in a way that overrides vte's
own -fno-exceptions. This is a hard error; fail the build.

See https://gitlab.gnome.org/GNOME/gnome-build-meta/issues/207